--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                             </li>
                                             <li class="glide__slide">
                                                 <img src="./img/socialMedia.png" class="w-100">
-                                                <h2 class="captionSlider">Inbound marketing</h2>
+                                                <h2 class="captionSlider">Marketing</h2>
                                             </li>
                                         </ul>
                                     </div>
@@ -202,43 +202,9 @@
             <div>
                 <img src="./img/arrowHeadUp.svg" class="arrowHeadUp">
             </div>
-            <!-- <div class="container">
-                <div class="row w-100 mt-5 mb-5">
-                    <div class="glide">
-                        <div class="glide__track" data-glide-el="track">
-                            <ul class="glide__slides">
-                                <li class="glide__slide">
-                                    <img src="./img/clients/clients.svg" class="w-100 logoLight">
-                                </li>
-                                <li class="glide__slide">
-                                    <img src="./img/clients/clients-02.svg" class="w-100 logoLight">
-                                </li>
-                                <li class="glide__slide">
-                                    <img src="./img/clients/clients-03.svg" class="w-100 logoLight">
-                                </li>
-                                <li class="glide__slide">
-                                    <img src="./img/clients/clients-04.svg" class="w-100 logoLight">
-                                </li>
-                                <li class="glide__slide">
-                                    <img src="./img/clients/clients-05.svg" class="w-100 logoLight">
-                                </li>
-                                <li class="glide__slide">
-                                    <img src="./img/clients/clients-06.svg" class="w-100 logoLight">
-                                </li>
-                                <li class="glide__slide">
-                                    <img src="./img/clients/clients-07.svg" class="w-100 logoLight">
-                                </li>
-                                <li class="glide__slide">
-                                    <img src="./img/clients/clients-08.svg" class="w-100 logoLight">
-                                </li>
-                            </ul>
-                        </div>
-                    </div> 
-                </div>
-            </div>-->
         </section>
         <!-- PROJECTS -->
-        <section class="mY-5" data-aos="fade-up">
+        <section class="mY-5">
             <div class="container">
                 <div class="row w-100">
                     <div class="col-12 col-md-6 col-lg-6">
@@ -258,42 +224,13 @@
                 </div>
                 <div class="row w-100">
                     <div class="projects" id="projects">
-                        <!-- <div class="col-4"> -->
-                        <!-- Card template -->
-                        <!--<div class="card">
-                                <div class="imageContainer">
-                                    <div class="overlay"></div>
-                                    <img src="./img/projects/enel_rewards.png" class="w-100">
-                                </div>
-                                <div class="meta">
-                                    <div class="row w-100">
-                                        <div class="col-12">
-                                            <h5 class="mt-4">Enel Rewards</h5>
-                                            <p class="mb-4">UX refinement and front end development</p>
-                                            <span class="mt-2">Read More</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div> -->
-                        <!-- End: card template -->
-                        <!-- </div> -->
+                        <!-- Cards created dynamically in fuctions.js -->
                     </div>
                 </div>
             </div>
-            <div class="projectsModal"></div>
-            <!--<div class="modalContainer">
-                 <div class="modalBg">
-                    <div class="cardMeta">
-                        <h3 class="client">${client}</h3>
-                        <h2 class="title">${title}</h2>
-                        <p class="year">${year}</p>
-                        <p class="description">${description}</p>
-                        <ul class="pills">
-
-                        </ul>
-
-                    </div> 
-                </div>-->
+            <div class="projectsModal">
+                <!-- Modals created dynamically in functions.js -->
+            </div>
             </div>
         </section>
         <section class="mY-5">
@@ -419,10 +356,11 @@
         <footer class="contact mt-5" data-aos="fade-up">
             <div class="container d-flex ">
                 <div class="row w-100 align-items-center">
-                    <div class="col-6">
-                        <h2 class="title text-right">Contact Me</h2>
+                    <div class="col-12 col-md-6 col-lg-6">
+                        <h2 class="title-light text-center">Contact Me</h2>
+                        <img src="./img/contact-circle.png" class="w-100 contact-circle">
                     </div>
-                    <div class="col-6 form">
+                    <div class="col-12 col-md-6 col-lg-6 form">
                         <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
                         <script>
                             hbspt.forms.create({
