Mobile and paths fixes

--- a/index.html
+++ b/index.html
@@ -45,16 +45,19 @@
         <section>
             <nav class="nav col-12">
                 <ul class="darkText">
-                    <li class="active">About me</li>
-                    <li>Projects</li>
-                    <li>Skills</li>
-                    <li>Contact</li>
+                    <div class="menu">
+                        <li class="active"><a href="#about">About me</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li href="#skills">Skills</li>
+                        <li href="#contact">Contact</li>
+                    </div>
+
                     <li id="toggleContainer">
-                        <div class="darkMode" id="toggle">
-                            <span class="switch"></span>
+                        <div class="darkMode" id="toggle"><span class="switch"></span>
                         </div>
                     </li>
                 </ul>
+                <div><span class="mobileMenu"></span></div>
             </nav>
         </section>
 
@@ -167,31 +170,31 @@
                             <div class="glide__track" data-glide-el="track">
                                 <ul class="glide__slides">
                                     <li class="glide__slide">
-                                        <img src="./img/clients/clients.svg" class="w-100 logoLight">
+                                        <img src="./img/clients/clients.svg" class="w-100 logoLight logoClient">
                                     </li>
                                     <li class="glide__slide">
-                                        <img src="./img/clients/clients-02.svg" class="w-100 logoLight">
+                                        <img src="./img/clients/clients-02.svg" class="w-100 logoLight logoClient">
                                     </li>
                                     <li class="glide__slide">
-                                        <img src="./img/clients/clients-03.svg" class="w-100 logoLight">
+                                        <img src="./img/clients/clients-03.svg" class="w-100 logoLight logoClient">
                                     </li>
                                     <li class="glide__slide">
-                                        <img src="./img/clients/clients-04.svg" class="w-100 logoLight">
+                                        <img src="./img/clients/clients-04.svg" class="w-100 logoLight logoClient">
                                     </li>
                                     <li class="glide__slide">
-                                        <img src="./img/clients/clients-05.svg" class="w-100 logoLight">
+                                        <img src="./img/clients/clients-05.svg" class="w-100 logoLight logoClient">
                                     </li>
                                     <li class="glide__slide">
-                                        <img src="./img/clients/clients-06.svg" class="w-100 logoLight">
+                                        <img src="./img/clients/clients-06.svg" class="w-100 logoLight logoClient">
                                     </li>
                                     <li class="glide__slide">
-                                        <img src="./img/clients/clients-07.svg" class="w-100 logoLight">
+                                        <img src="./img/clients/clients-07.svg" class="w-100 logoLight logoClient">
                                     </li>
                                     <li class="glide__slide">
-                                        <img src="./img/clients/clients-08.svg" class="w-100 logoLight">
+                                        <img src="./img/clients/clients-08.svg" class="w-100 logoLight logoClient">
                                     </li>
                                     <li class="glide__slide">
-                                        <img src="./img/clients/clients-09.svg" class="w-100 logoLight">
+                                        <img src="./img/clients/clients-09.svg" class="w-100 logoLight logoClient">
                                     </li>
                                 </ul>
                             </div>
@@ -358,6 +361,9 @@
                 <div class="row w-100 align-items-center">
                     <div class="col-12 col-md-6 col-lg-6">
                         <h2 class="title-light text-center">Contact Me</h2>
+                        <h3>Always willing to help</h3>
+                        <p><a href="https://wa.me/525530388534">Send a WhatsApp message</a></p>
+                        <p><a href="mailto:info@dimarcogarcia.com">info@dimarcogarcia.com</a></p>
                         <img src="./img/contact-circle.png" class="w-100 contact-circle">
                     </div>
                     <div class="col-12 col-md-6 col-lg-6 form">
