--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
         <section class="mb-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-md-6 col-lg-6">
+                    <div class="col-12 col-md-6 col-lg-6 mt-3">
                         <h1>Everything for your brand</h1>
                         <h4 class="darkText">Web development, digital marketing, design and more</h4>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-6">
+                    <div class="col-12 col-md-6 col-lg-6 mt-3">
                         <div class="containerHero">
                             <img src="./img/circle.png" class="heroBg animationRotate">
                             <img src="./img/phone.png" class="phone">
@@ -223,7 +223,7 @@
                         <li id="spatial">Spatial design</li>
                         <!-- <li id="uxui">UX/UI</li> -->
                         <li id="visualDesign">Visual design</li>
-                        <li id="innovation">Innovation</li>
+                        <!-- <li id="innovation">Innovation</li> -->
                     </ul>
 
                 </div>
@@ -238,12 +238,12 @@
             </div>
             </div>
         </section>
-        <section class="mY-5" id="skills">
+        <section class="mt-5" id="skills">
             <div class="container">
                 <div class="row w-100">
                     <div class="col-12">
                         <div class="row w-100">
-                            <div class="col-12 col-md-6 col-lg-6 mY-5">
+                            <div class="col-12 col-md-6 col-lg-6 mt-5">
                                 <h2 class="title text-left">Skills</h2>
                             </div>
                         </div>
@@ -363,7 +363,7 @@
                 <div class="row w-100 align-items-center">
                     <div class="col-12 col-md-6 col-lg-6 text-center padX-5">
                         <h2 class="title-light mY-5">Contact Me</h2>
-                        <h3 class="title mb-5">Always willing to help</h3>
+                        <h4 class="title-light mb-5">Always willing to help</h4>
                         <p class="mb-5"><a href="https://wa.me/525530388534" class="btn mb-5">Send a WhatsApp message</a></p>
                         <p class="mb-5 text-dark">Or send me an email <a href="mailto:info@dimarcogarcia.com">info@dimarcogarcia.com</a></p>
                     </div>
