--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="menu">
                     <ul class="darkText row col-lg-12">
                         <li><img src="img/close.svg" class="closeMobileMenu" id="closeMobileMenu"></li>
-                        <li class="active"><a href="#about">About me</a></li>
+                        <li class="active"><a href="#aboutMe">About me</a></li>
                         <li><a href="#projects">Projects</a></li>
                         <li><a href="#skills">Skills</a></li>
                         <li><a href="#contact">Contact</a></li>
@@ -66,11 +66,11 @@
         <section class="mb-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-md-6 col-lg-6 mt-3">
+                    <div class="col-12 col-md-6 col-lg-6">
                         <h1>Everything for your brand</h1>
                         <h4 class="darkText">Web development, digital marketing, design and more</h4>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-6 mt-3">
+                    <div class="col-12 col-md-6 col-lg-6">
                         <div class="containerHero">
                             <img src="./img/circle.png" class="heroBg animationRotate">
                             <img src="./img/phone.png" class="phone">
@@ -89,7 +89,7 @@
                                             </li>
                                             <li class="glide__slide">
                                                 <img src="./img/socialMedia.png" class="w-100">
-                                                <h2 class="captionSlider">Marketing</h2>
+                                                <h2 class="captionSlider">Inbound marketing</h2>
                                             </li>
                                         </ul>
                                     </div>
@@ -110,7 +110,7 @@
         </section>
     </header>
     <main>
-        <section id="about" class="mY-5">
+        <section id="aboutMe" class="mY-5">
             <div class="container">
                 <div class="row justify-content-flex-end">
                     <div class="col-10 col-md-12 col-lg-12">
@@ -172,31 +172,31 @@
                             <div class="glide__track" data-glide-el="track">
                                 <ul class="glide__slides">
                                     <li class="glide__slide">
-                                        <img src="./img/clients/clients.svg" class="w-100 logoLight logoClient">
+                                        <img src="./img/clients/clients.svg" class="w-100 logoLight">
                                     </li>
                                     <li class="glide__slide">
-                                        <img src="./img/clients/clients-02.svg" class="w-100 logoLight logoClient">
+                                        <img src="./img/clients/clients-02.svg" class="w-100 logoLight">
                                     </li>
                                     <li class="glide__slide">
-                                        <img src="./img/clients/clients-03.svg" class="w-100 logoLight logoClient">
+                                        <img src="./img/clients/clients-03.svg" class="w-100 logoLight">
                                     </li>
                                     <li class="glide__slide">
-                                        <img src="./img/clients/clients-04.svg" class="w-100 logoLight logoClient">
+                                        <img src="./img/clients/clients-04.svg" class="w-100 logoLight">
                                     </li>
                                     <li class="glide__slide">
-                                        <img src="./img/clients/clients-05.svg" class="w-100 logoLight logoClient">
+                                        <img src="./img/clients/clients-05.svg" class="w-100 logoLight">
                                     </li>
                                     <li class="glide__slide">
-                                        <img src="./img/clients/clients-06.svg" class="w-100 logoLight logoClient">
+                                        <img src="./img/clients/clients-06.svg" class="w-100 logoLight">
                                     </li>
                                     <li class="glide__slide">
-                                        <img src="./img/clients/clients-07.svg" class="w-100 logoLight logoClient">
+                                        <img src="./img/clients/clients-07.svg" class="w-100 logoLight">
                                     </li>
                                     <li class="glide__slide">
-                                        <img src="./img/clients/clients-08.svg" class="w-100 logoLight logoClient">
+                                        <img src="./img/clients/clients-08.svg" class="w-100 logoLight">
                                     </li>
                                     <li class="glide__slide">
-                                        <img src="./img/clients/clients-09.svg" class="w-100 logoLight logoClient">
+                                        <img src="./img/clients/clients-09.svg" class="w-100 logoLight">
                                     </li>
                                 </ul>
                             </div>
@@ -209,7 +209,7 @@
             </div>
         </section>
         <!-- PROJECTS -->
-        <section class="mY-5" id="projects">
+        <section class="mY-5">
             <div class="container">
                 <div class="row w-100">
                     <div class="col-12 col-md-6 col-lg-6">
@@ -223,7 +223,7 @@
                         <li id="spatial">Spatial design</li>
                         <!-- <li id="uxui">UX/UI</li> -->
                         <li id="visualDesign">Visual design</li>
-                        <!-- <li id="innovation">Innovation</li> -->
+                        <li id="innovation">Innovation</li>
                     </ul>
 
                 </div>
@@ -238,12 +238,12 @@
             </div>
             </div>
         </section>
-        <section class="mt-5" id="skills">
+        <section class="mY-5">
             <div class="container">
                 <div class="row w-100">
                     <div class="col-12">
                         <div class="row w-100">
-                            <div class="col-12 col-md-6 col-lg-6 mt-5">
+                            <div class="col-12 col-md-6 col-lg-6 mY-5">
                                 <h2 class="title text-left">Skills</h2>
                             </div>
                         </div>
@@ -358,14 +358,14 @@
             </div>
         </section>
         <!-- Begin: contact section  -->
-        <footer class="contact mt-5" data-aos="fade-up" id="contact">
+        <footer class="contact mt-5" data-aos="fade-up">
             <div class="container d-flex footerContainer">
                 <div class="row w-100 align-items-center">
                     <div class="col-12 col-md-6 col-lg-6 text-center padX-5">
                         <h2 class="title-light mY-5">Contact Me</h2>
-                        <h4 class="title-light mb-5">Always willing to help</h4>
+                        <h3 class="title-light mb-5">Always willing to help</h3>
                         <p class="mb-5"><a href="https://wa.me/525530388534" class="btn mb-5">Send a WhatsApp message</a></p>
-                        <p class="mb-5 text-dark">Or send me an email <a href="mailto:info@dimarcogarcia.com">info@dimarcogarcia.com</a></p>
+                        <p class="mb-5 text-dark">Or send me an email to <a href="mailto:info@dimarcogarcia.com">info@dimarcogarcia.com</a></p>
                     </div>
                     <div class="col-12 col-md-6 col-lg-6 form">
                         <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
