Fixed issues with categories and img paths

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                         <li><img src="img/close.svg" class="closeMobileMenu" id="closeMobileMenu"></li>
                         <li class="active"><a href="#aboutMe">About me</a></li>
                         <li><a href="#projects">Projects</a></li>
-                        <li><a href="#skills">Skills</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#mySkills">Skills</a></li>
+                        <li><a href="#contactMe">Contact</a></li>
                         <li id="toggleContainer">
                             <div class="darkMode" id="toggle">
                                 <span class="switch"></span>
@@ -67,7 +67,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-6">
-                        <h1>Everything for your brand</h1>
+                        <h1 class="mt-5">Everything for your brand</h1>
                         <h4 class="darkText">Web development, digital marketing, design and more</h4>
                     </div>
                     <div class="col-12 col-md-6 col-lg-6">
@@ -238,7 +238,7 @@
             </div>
             </div>
         </section>
-        <section class="mY-5">
+        <section class="mY-5" id="mySkills">
             <div class="container">
                 <div class="row w-100">
                     <div class="col-12">
@@ -358,14 +358,14 @@
             </div>
         </section>
         <!-- Begin: contact section  -->
-        <footer class="contact mt-5" data-aos="fade-up">
+        <footer class="contact mt-5" data-aos="fade-up" id="#contactMe">
             <div class="container d-flex footerContainer">
                 <div class="row w-100 align-items-center">
                     <div class="col-12 col-md-6 col-lg-6 text-center padX-5">
                         <h2 class="title-light mY-5">Contact Me</h2>
                         <h3 class="title-light mb-5">Always willing to help</h3>
-                        <p class="mb-5"><a href="https://wa.me/525530388534" class="btn mb-5">Send a WhatsApp message</a></p>
-                        <p class="mb-5 text-dark">Or send me an email to <a href="mailto:info@dimarcogarcia.com">info@dimarcogarcia.com</a></p>
+                        <p class="mY-3"><a href="https://wa.me/525530388534" class="btn mb-5">Send a WhatsApp message</a></p>
+                        <p class="mY-3 text-dark">Or send me an email to <a href="mailto:info@dimarcogarcia.com">info@dimarcogarcia.com</a></p>
                     </div>
                     <div class="col-12 col-md-6 col-lg-6 form">
                         <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/embed/v2.js"></script>
