Arrow header size fixed

--- a/index.html
+++ b/index.html
@@ -335,13 +335,13 @@
                                     <p class="d-flex align-items-center"><span><img src="" class="logoPill"></span>Scrum</p>
                                 </div>
                                 <div class="pill">
-                                    <p class="d-flex align-items-center"><span><img src="" class="logoPill"></span>Agile</p>
+                                    <p class="d-flex align-items-center"><span><img src="" class="logoPill"></span>Design Sprint</p>
                                 </div>
                                 <div class="pill">
                                     <p class="d-flex align-items-center"><span><img src="" class="logoPill"></span>Adobe After Effects</p>
                                 </div>
                                 <div class="pill">
-                                    <p class="d-flex align-items-center"><span><img src="" class="logoPill"></span>Photography</p>
+                                    <p class="d-flex align-items-center"><span><img src="" class="logoPill"></span>Strategic Design</p>
                                 </div>
                                 <div class="pill">
                                     <p class="d-flex align-items-center"><span><img src="" class="logoPill"></span>Illustration</p>
@@ -389,6 +389,7 @@
     <script src="./js/projectsData/spatial.js "></script>
     <script src="./js/projectsData/advertising.js "></script>
     <script src="./js/projectsData/visualDesign.js "></script>
+    <script src="./js/projectsData/innovation.js "></script>
     <!-- Main JS -->
     <script src="./js/functions.js "></script>
     <!-- Glide JS -->
